data/diff_tests/v8/loop_ImproperFunctionCallorReturnHandling_878.wast
;; 9. **Test Description**: Creating a `loop` that calls a function to prematurely return from within the loop when certain conditions are met, effectively breaking out of the loop.    - **Constraint**: Ensures that function calls can correctly modify the loop's control flow to break out as intended.    - **Improper Handling**: Mismanagement of loop control flow leading to infinite loops or incorrect termination. -

(assert_invalid 
  (module 
    (type $sig (func (result i32))) 
    (func $exit_loop (result i32) 
      (i32.const 1)) 
    (func $test_loop 
      (loop (result i32) 
        (call $exit_loop) 
        br_if 0))) 
  "type mismatch")